tests/errors/ErrIds1.yogur
def mod(a: Int, b: Int) -> c: Int {
	c = a - (a / b) * b
}

def mcd(a: Int, b: Int) -> c: Int {
	if b == 0 {
		c = a
	} else {
		c = otrafuncion(b, mod(a, b))
	}
}